<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs325.zhang.calculator.CalculatorActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="+" 
        android:onClick="plus"
        />

    <Button
        android:id="@+id/btMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btPlus"
        android:layout_below="@+id/btPlus"
        android:text="-" 
        android:onClick="minus"
        />

    <Button
        android:id="@+id/btMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btMinus"
        android:layout_below="@+id/btMinus"
        android:text="*"
        android:onClick="multiply"
         />

    <Button
        android:id="@+id/btDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btMultiply"
        android:layout_below="@+id/btMultiply"
        android:text="/" 
        android:onClick="divide"
        />

    <TextView
        android:id="@+id/tvValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btMinus"
        android:layout_alignLeft="@+id/title"
        android:text="@string/value1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btDivide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/about_button"
        android:onClick="showAboutActivity"
         />

    <TextView
        android:id="@+id/tvValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btMultiply"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/btMinus"
        android:text="@string/value2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btDivide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/result_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etValue1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btMultiply"
        android:layout_alignLeft="@+id/tvValue1"
        android:inputType="numberDecimal" >

    </EditText>

    <EditText
        android:id="@+id/etValue2"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btMultiply"
        android:layout_alignLeft="@+id/tvValue2"
        android:layout_width="100dp"
        android:inputType="numberDecimal" />

</RelativeLayout>