<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs325.zhang.calculator.AboutActivity" >

    <TextView
        android:id="@+id/tvStatisticStartedTimesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic_started_times_count" />
    
    <TextView
        android:id="@+id/tvStatisticTotalComputationCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStatisticStartedTimesLabel"
        android:text="@string/statistic_total_computation_count" />

    <TextView
        android:id="@+id/tvStatisticSessionComputationCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStatisticTotalComputationCountLabel"
        android:text="@string/statistic_session_computation_count" />

    <TextView
        android:id="@+id/tvStatisticStartedTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvStatisticTotalComputationCountLabel"
        android:layout_toRightOf="@+id/tvStatisticStartedTimesLabel"
        android:text="0"
        />

    <TextView
        android:id="@+id/tvStatisticTotalComputationCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvStatisticTotalComputationCountLabel"
        android:layout_toRightOf="@+id/tvStatisticTotalComputationCountLabel"
        android:text="0" />

    <TextView
        android:id="@+id/tvStatisticSessionComputationCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvStatisticSessionComputationCountLabel"
        android:layout_toRightOf="@+id/tvStatisticSessionComputationCountLabel"
        android:text="0" />

</RelativeLayout>